--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacInfy</title>
+    <link rel="stylesheet" href="style.css">
+    <script>
+        if(sessionStorage.getItem("sessionID")==null){
+            console.log("cdcdc")
+            window.location.replace("landing.html");
+        }
+    </script>
+    <script src="app.js"></script>
+    <script src="landingHandler.js"></script>
+    <script src="serviceCall.js"></script>
 </head>
 <body>
+    <!-- Game Title -->
     <p id="won">TIC TAC INFY</p>
+
+    <!-- Game Grid -->
     <div class="grid-container">
         <div class="grid-item" id="demo0" onclick="myFunction(id)"></div>
         <div class="grid-item" id="demo1" onclick="myFunction(id)"></div>
@@ -19,6 +30,6 @@
         <div class="grid-item" id="demo6" onclick="myFunction(id)"></div>
         <div class="grid-item" id="demo7" onclick="myFunction(id)"></div>
         <div class="grid-item" id="demo8" onclick="myFunction(id)"></div>
-      </div>
+    </div>
 </body>
 </html>
