--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TicTacInfy</title>
     <link rel="stylesheet" href="style.css">
     <script>
-        if(sessionStorage.getItem("sessionID")==null){
+        if(localStorage.getItem("sessionID")==null){
             console.log("cdcdc")
             window.location.replace("landing.html");
         }
@@ -21,15 +21,15 @@
 
     <!-- Game Grid -->
     <div class="grid-container">
-        <div class="grid-item" id="demo0" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo1" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo2" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo3" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo4" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo5" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo6" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo7" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo8" onclick="myFunction(id)"></div>
+        <div class="grid-item" id="demo0" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo1" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo2" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo3" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo4" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo5" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo6" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo7" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo8" onclick="updateCell(id,currPlayerXorO())"></div>
     </div>
 </body>
 </html>
