--- a/backend/tictatinfy/src/main/resources/static/index.html
+++ b/backend/tictatinfy/src/main/resources/static/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacInfy</title>
+    <link rel="stylesheet" href="style.css">
+    <script>
+        if(localStorage.getItem("sessionID")==null){
+            console.log("cdcdc")
+            window.location.replace("landing.html");
+        }
+    </script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="landingHandler.js"></script>
+    <script type="module" src="serviceCall.js"></script>
 </head>
 <body>
+    <!-- Game Title -->
     <p id="won">TIC TAC INFY</p>
+
+    <!-- Game Grid -->
     <div class="grid-container">
-        <div class="grid-item" id="demo0" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo1" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo2" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo3" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo4" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo5" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo6" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo7" onclick="myFunction(id)"></div>
-        <div class="grid-item" id="demo8" onclick="myFunction(id)"></div>
-      </div>
+        <div class="grid-item" id="demo0" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo1" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo2" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo3" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo4" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo5" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo6" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo7" onclick="updateCell(id,currPlayerXorO())"></div>
+        <div class="grid-item" id="demo8" onclick="updateCell(id,currPlayerXorO())"></div>
+    </div>
 </body>
 </html>
